--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -204,6 +204,8 @@ app.interest.max-chars=30
 app.donation.modulus=10
 app.url.auth.success=/profile
 app.url.auth.failure=/login?error
+#24 hours
+app.user.delete.delay=108000000
 
 #schedules
 app.schedule.enabled=true
@@ -217,5 +219,5 @@ app.schedule.delay.captcha=300000
 app.schedule.delay.hide=2592000000
 #5 minutes
 app.schedule.delay.password-reset=300000
-#5 minutes
-app.schedule.delay.delete-account=300000
+#24 hours
+app.schedule.delay.delete-account=108000000
