--- a/src/main/resources/static/manifest/manifest.json
+++ b/src/main/resources/static/manifest/manifest.json
@@ -33,7 +33,7 @@
   "display": "fullscreen",
   "scope": "/",
   "theme_color": "#3298DC",
-  "description" : "Open-source app for meeting new and awesome people",
+  "description" : "Meet amazing people around you, privately!",
   "orientation" : "any",
   "lang" : "English"
 }
