--- a/pom.xml
+++ b/pom.xml
@@ -148,6 +148,11 @@
 			<artifactId>vorbisspi</artifactId>
 			<version>1.0.3.3</version>
 		</dependency>
+		<dependency>
+			<groupId>org.sejda.imageio</groupId>
+			<artifactId>webp-imageio</artifactId>
+			<version>0.1.6</version>
+		</dependency>
 	</dependencies>
 
 
