Trim audio and save audio as mp3 to reduce RAM usage and DB storage size

--- a/pom.xml
+++ b/pom.xml
@@ -138,16 +138,18 @@
 		</dependency>
 		<!-- <dependency> <groupId>javax.media</groupId> <artifactId>jmf</artifactId> 
 			<version>2.1.1e</version> </dependency> -->
+
+
+		<!-- <dependency> <groupId>com.googlecode.soundlibs</groupId> <artifactId>mp3spi</artifactId> 
+			<version>1.9.5.4</version> </dependency> <dependency> <groupId>com.googlecode.soundlibs</groupId> 
+			<artifactId>vorbisspi</artifactId> <version>1.0.3.3</version> </dependency> -->
+
 		<dependency>
-			<groupId>com.googlecode.soundlibs</groupId>
-			<artifactId>mp3spi</artifactId>
-			<version>1.9.5.4</version>
+			<groupId>com.sipgate</groupId>
+			<artifactId>mp3-wav</artifactId>
+			<version>1.0.3</version>
 		</dependency>
-		<dependency>
-			<groupId>com.googlecode.soundlibs</groupId>
-			<artifactId>vorbisspi</artifactId>
-			<version>1.0.3.3</version>
-		</dependency>
+
 		<dependency>
 			<groupId>org.sejda.imageio</groupId>
 			<artifactId>webp-imageio</artifactId>
