--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -177,8 +177,7 @@ app.name=Alovoa
 app.domain=https://localhost:8443
 
 app.audio.max-time=10
-#in kiloBytes
-app.audio.max-size=1024
+app.media.max-size=1048576
 app.captcha.length=4
 app.password-token.length=32
 app.age.min=16
@@ -188,7 +187,7 @@ app.age.legal=18
 #7 days
 app.donation.popup.time=604800000
 app.token.length=30
-app.profile.image.length=800
+app.profile.image.length=600
 app.profile.image.max=4
 app.profile.description.size=255
 app.search.max=20
