Change manifest display property back to standalone

--- a/src/main/resources/static/manifest/manifest.json
+++ b/src/main/resources/static/manifest/manifest.json
@@ -30,7 +30,7 @@
   ],
   "start_url": "/",
   "background_color": "#3298DC",
-  "display": "fullscreen",
+  "display": "standalone",
   "scope": "/",
   "theme_color": "#3298DC",
   "description" : "Meet amazing people around you, privately!",
