--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -60,7 +60,7 @@ logging.file.name=./logs/spring.log
 
 #caching
 spring.cache.cache-names=bucket4j
-spring.cache.caffeine.spec=maximumSize=1000000,expireAfterAccess=20s
+spring.cache.caffeine.spec=maximumSize=1000000,expireAfterAccess=1d
 #bucket4j
 bucket4j.enabled=true
 
@@ -69,7 +69,7 @@ bucket4j.filters[0].url=.*
 bucket4j.filters[0].metrics.tags[0].key=IP
 bucket4j.filters[0].metrics.tags[0].expression=getRemoteAddr()
 bucket4j.filters[0].rate-limits[0].bandwidths[0].capacity=100
-bucket4j.filters[0].rate-limits[0].bandwidths[0].time=10
+bucket4j.filters[0].rate-limits[0].bandwidths[0].time=8
 bucket4j.filters[0].rate-limits[0].bandwidths[0].unit=seconds
 
 bucket4j.filters[1].cache-name=bucket4j
