Fixed icon colors in index.html with dark theme. Add portrait orientation in manifest.

--- a/src/main/resources/static/manifest/manifest.json
+++ b/src/main/resources/static/manifest/manifest.json
@@ -34,6 +34,6 @@
   "scope": "/",
   "theme_color": "#ec407a",
   "description" : "Meet amazing people around you, privately!",
-  "orientation" : "any",
+  "orientation" : "portrait",
   "lang" : "English"
 }
