--- a/pom.xml
+++ b/pom.xml
@@ -127,14 +127,19 @@
 			<version>3.0.3</version>
 		</dependency>
 		<dependency>
+			<groupId>org.bouncycastle</groupId>
+			<artifactId>bcprov-jdk15on</artifactId>
+			<version>1.68</version>
+		</dependency>
+		<dependency>
 			<groupId>nl.martijndwars</groupId>
 			<artifactId>web-push</artifactId>
-			<version>3.0.1</version>
+			<version>5.1.1</version>
 		</dependency>
 		<dependency>
 			<groupId>com.giffing.bucket4j.spring.boot.starter</groupId>
 			<artifactId>bucket4j-spring-boot-starter</artifactId>
-			<version>0.2.0</version>
+			<version>0.3.3</version>
 		</dependency>
 		<!-- <dependency> <groupId>javax.media</groupId> <artifactId>jmf</artifactId> 
 			<version>2.1.1e</version> </dependency> -->
