Fix error updating description when empty. Added some new animations for warnings, fixes sudden popups.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -68,8 +68,8 @@ bucket4j.filters[0].cache-name=bucket4j
 bucket4j.filters[0].url=.*
 bucket4j.filters[0].metrics.tags[0].key=IP
 bucket4j.filters[0].metrics.tags[0].expression=getRemoteAddr()
-bucket4j.filters[0].rate-limits[0].bandwidths[0].capacity=100
-bucket4j.filters[0].rate-limits[0].bandwidths[0].time=5
+bucket4j.filters[0].rate-limits[0].bandwidths[0].capacity=30
+bucket4j.filters[0].rate-limits[0].bandwidths[0].time=1
 bucket4j.filters[0].rate-limits[0].bandwidths[0].unit=seconds
 
 bucket4j.filters[1].cache-name=bucket4j
@@ -167,6 +167,16 @@ bucket4j.filters[12].metrics.tags[0].expression=getRemoteAddr()
 bucket4j.filters[12].rate-limits[0].bandwidths[0].capacity=1
 bucket4j.filters[12].rate-limits[0].bandwidths[0].time=3
 bucket4j.filters[12].rate-limits[0].bandwidths[0].unit=seconds
+
+bucket4j.filters[13].cache-name=bucket4j
+bucket4j.filters[13].url=/profile/view/*
+bucket4j.filters[13].metrics.tags[0].key=IP
+bucket4j.filters[13].metrics.tags[0].expression=getRemoteAddr()
+bucket4j.filters[13].rate-limits[0].bandwidths[0].capacity=1
+bucket4j.filters[13].rate-limits[0].bandwidths[0].time=3
+bucket4j.filters[13].rate-limits[0].bandwidths[0].unit=seconds
+
+
 
 
 # custom values
