--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,7 +30,7 @@ spring.security.oauth2.client.registration.facebook.scope[1]=public_profile
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.use-new-id-generator-mappings=false
 spring.jpa.hibernate.ddl-auto=update
@@ -188,7 +188,7 @@ app.domain=https://localhost:8443
 
 app.audio.max-time=10
 app.media.max-size=2097152
-app.captcha.length=4
+app.captcha.length=5
 app.password-token.length=32
 app.age.min=16
 app.age.max=99
