--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -204,6 +204,7 @@ app.search.max=20
 app.search.max.distance=100
 app.message.size=255
 app.donate.users.max=100
+app.vapid.max=10
 
 app.vapid.public=BEfuzSVrY3s8fD1MpytGBncV-S_Wv4KdOvomVaiwpomu3sJwIkdI5ivmrs3D4RVTApxytQnY3761XlQGj-jv6XA
 app.vapid.private=QibUiZ7evckF5kC2S6ppG8EJQhWPnyel9DfQEs-k41I
