Set limit for messages in a conversation. Default is 50. Older messages will be deleted if limit is surpassed.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -203,6 +203,7 @@ app.profile.description.size=255
 app.search.max=20
 app.search.max.distance=100
 app.message.size=255
+app.conversation.messages-max=50
 app.donate.users.max=100
 app.vapid.max=10
 
