--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -228,5 +228,10 @@
     "name": "app.vapid.max",
     "type": "java.lang.String",
     "description": "A description for 'app.vapid.max'"
+  },
+  {
+    "name": "app.conversation.messages-max",
+    "type": "java.lang.String",
+    "description": "A description for 'app.conversation.messages-max'"
   }
 ]}
