Improved code quality with pmd

--- a/pom.xml
+++ b/pom.xml
@@ -176,4 +176,14 @@
 		</plugins>
 	</build>
 
+	<reporting>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-pmd-plugin</artifactId>
+				<version>3.13.0</version>
+			</plugin>
+		</plugins>
+	</reporting>
+
 </project>
