Fixes for donations from Ko-fi

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -53,8 +53,8 @@ spring.mail.test-connection=true
 
 # logging
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%n
-logging.level.org.springframework.web=DEBUG
-logging.level.org.hibernate.SQL=debug
+logging.level.org.springframework.web=INFO
+logging.level.org.hibernate.SQL=ERROR
 logging.level.org.hibernate=ERROR
 logging.file.name=./logs/spring.log
 
