Limit changing user intention. Default is once every 24h.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -210,6 +210,7 @@ app.vapid.max=10
 app.vapid.public=BEfuzSVrY3s8fD1MpytGBncV-S_Wv4KdOvomVaiwpomu3sJwIkdI5ivmrs3D4RVTApxytQnY3761XlQGj-jv6XA
 app.vapid.private=QibUiZ7evckF5kC2S6ppG8EJQhWPnyel9DfQEs-k41I
 
+app.intention.delay=86400000
 app.interest.max=5
 app.interest.min-chars=3
 app.interest.max-chars=30
@@ -217,7 +218,7 @@ app.donation.modulus=10
 app.url.auth.success=/profile
 app.url.auth.failure=/login?error
 #24 hours
-app.user.delete.delay=108000000
+app.user.delete.delay=86400000
 
 #schedules
 app.schedule.enabled=true
