--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -233,5 +233,10 @@
     "name": "app.conversation.messages-max",
     "type": "java.lang.String",
     "description": "A description for 'app.conversation.messages-max'"
+  },
+  {
+    "name": "app.intention.delay",
+    "type": "java.lang.String",
+    "description": "A description for 'app.intention.delay'"
   }
 ]}
