Add rate limiting for captchas

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -176,6 +176,13 @@ bucket4j.filters[13].rate-limits[0].bandwidths[0].capacity=1
 bucket4j.filters[13].rate-limits[0].bandwidths[0].time=3
 bucket4j.filters[13].rate-limits[0].bandwidths[0].unit=seconds
 
+bucket4j.filters[14].cache-name=bucket4j
+bucket4j.filters[14].url=/captcha/generate
+bucket4j.filters[14].metrics.tags[0].key=IP
+bucket4j.filters[14].metrics.tags[0].expression=getRemoteAddr()
+bucket4j.filters[14].rate-limits[0].bandwidths[0].capacity=5
+bucket4j.filters[14].rate-limits[0].bandwidths[0].time=120
+bucket4j.filters[14].rate-limits[0].bandwidths[0].unit=seconds
 
 
 
