--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -194,6 +194,8 @@ app.tos.update-date=2000-01-01
 app.name=Alovoa
 app.domain=https://localhost:8443
 
+app.first-name.length-min=2
+app.first-name.length-max=20
 app.audio.max-time=10
 app.media.max-size=2097152
 app.captcha.length=5
