Update privacy policy. Add delete schedules for contacts. Update UserTest, now checking length of first name when registering.

--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -243,5 +243,10 @@
     "name": "app.first-name.length-max",
     "type": "java.lang.String",
     "description": "A description for 'app.first-name.length-max'"
+  },
+  {
+    "name": "app.schedule.delay.contact",
+    "type": "java.lang.String",
+    "description": "A description for 'app.schedule.delay.contact'"
   }
 ]}
