--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -239,8 +239,10 @@ app.schedule.long=3600000
 #5 minutes
 app.schedule.delay.captcha=300000
 #30 days
-app.schedule.delay.hide=2592000000
+app.schedule.delay.hide=3240000000
 #5 minutes
 app.schedule.delay.password-reset=300000
 #24 hours
 app.schedule.delay.delete-account=108000000
+#90 days
+app.schedule.delay.contact=9720000000
