--- a/pom.xml
+++ b/pom.xml
@@ -165,6 +165,10 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+			</plugin>
 			<!-- Only needed to generate encrypted values -->
 			<plugin>
 				<groupId>com.github.ulisesbocchio</groupId>
