Improved UI for user interests. Fixed blocked users not opening in new tab.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -188,7 +188,7 @@ bucket4j.filters[14].rate-limits[0].bandwidths[0].unit=seconds
 
 
 # custom values
-app.company.name=Alovoa LLC
+app.company.name=Alovoa
 app.privacy.update-date=2000-01-01
 app.tos.update-date=2000-01-01
 app.name=Alovoa
