Update manifest files

--- a/src/main/resources/static/manifest/manifest-kaios.json
+++ b/src/main/resources/static/manifest/manifest-kaios.json
@@ -18,7 +18,7 @@
 	    "en-US": {
 	      "name": "Alovoa",
 	      "subtitle": "Meet awesome people",
-	      "description": "Meet amazing people around you, privately!"
+	      "description": "Meet new, exciting people!"
 	    }
 	  },
 	  "default_locale": "en-US"
