--- a/src/main/resources/static/manifest/manifest.json
+++ b/src/main/resources/static/manifest/manifest.json
@@ -33,7 +33,7 @@
   "display": "standalone",
   "scope": "/",
   "theme_color": "#ec407a",
-  "description" : "Meet amazing people around you, privately!",
+  "description" : "Meet new, exciting people!",
   "orientation" : "portrait",
   "lang" : "English"
 }
