--- a/src/main/resources/static/manifest/manifest-kaios.json
+++ b/src/main/resources/static/manifest/manifest-kaios.json
@@ -17,7 +17,7 @@
 	  "locales": {
 	    "en-US": {
 	      "name": "Alovoa",
-	      "subtitle": "Meet awesome people",
+	      "subtitle": "Meet new, exciting people!",
 	      "description": "Meet new, exciting people!"
 	    }
 	  },
