--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,8 @@ server.port=${PORT:8443}
 #server.ssl.key-store-password=alovoa
 #server.ssl.key-alias=alovoa
 
+server.http2.enabled=true
+
 spring.datasource.platform=mysql
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/alovoa?createDatabaseIfNotExist=true&serverTimezone=UTC&useLegacyDatetimeCode=false
