Add option to disable plus addressing when registering.

--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -253,5 +253,10 @@
     "name": "app.login.remember.key",
     "type": "java.lang.String",
     "description": "A description for 'app.login.remember.key'"
+  },
+  {
+    "name": "app.mail.plus-addressing",
+    "type": "java.lang.String",
+    "description": "A description for 'app.mail.plus-addressing'"
   }
 ]}
