--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -205,6 +205,7 @@ app.tos.update-date=2021-06-05
 app.name=Alovoa
 app.domain=https://localhost:8443
 
+app.mail.plus-addressing=false
 app.first-name.length-min=2
 app.first-name.length-max=20
 app.audio.max-time=10
