Adjust manifest start_url

--- a/src/main/resources/static/manifest/manifest.json
+++ b/src/main/resources/static/manifest/manifest.json
@@ -28,7 +28,7 @@
       "sizes": "512x512"
     }
   ],
-  "start_url": "/",
+  "start_url": "/?pwa=true",
   "background_color": "#ec407a",
   "display": "standalone",
   "scope": "/",
