--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -193,9 +193,17 @@ bucket4j.filters[15].cache-name=bucket4j
 bucket4j.filters[15].url=/info
 bucket4j.filters[15].metrics.tags[0].key=IP
 bucket4j.filters[15].metrics.tags[0].expression=getRemoteAddr()
-bucket4j.filters[15].rate-limits[0].bandwidths[0].capacity=1
-bucket4j.filters[15].rate-limits[0].bandwidths[0].time=10
+bucket4j.filters[15].rate-limits[0].bandwidths[0].capacity=2
+bucket4j.filters[15].rate-limits[0].bandwidths[0].time=20
 bucket4j.filters[15].rate-limits[0].bandwidths[0].unit=seconds
+
+bucket4j.filters[16].cache-name=bucket4j
+bucket4j.filters[16].url=/profile/*
+bucket4j.filters[16].metrics.tags[0].key=IP
+bucket4j.filters[16].metrics.tags[0].expression=getRemoteAddr()
+bucket4j.filters[16].rate-limits[0].bandwidths[0].capacity=10
+bucket4j.filters[16].rate-limits[0].bandwidths[0].time=20
+bucket4j.filters[16].rate-limits[0].bandwidths[0].unit=seconds
 
 
 # custom values
