Add rate limiting and changed url of liked-users and disliked-users

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -198,12 +198,28 @@ bucket4j.filters[15].rate-limits[0].bandwidths[0].time=20
 bucket4j.filters[15].rate-limits[0].bandwidths[0].unit=seconds
 
 bucket4j.filters[16].cache-name=bucket4j
-bucket4j.filters[16].url=/profile/*
+bucket4j.filters[16].url=/user/*
 bucket4j.filters[16].metrics.tags[0].key=IP
 bucket4j.filters[16].metrics.tags[0].expression=getRemoteAddr()
 bucket4j.filters[16].rate-limits[0].bandwidths[0].capacity=10
 bucket4j.filters[16].rate-limits[0].bandwidths[0].time=20
 bucket4j.filters[16].rate-limits[0].bandwidths[0].unit=seconds
+
+bucket4j.filters[17].cache-name=bucket4j
+bucket4j.filters[17].url=/user/liked-users
+bucket4j.filters[17].metrics.tags[0].key=IP
+bucket4j.filters[17].metrics.tags[0].expression=getRemoteAddr()
+bucket4j.filters[17].rate-limits[0].bandwidths[0].capacity=2
+bucket4j.filters[17].rate-limits[0].bandwidths[0].time=120
+bucket4j.filters[17].rate-limits[0].bandwidths[0].unit=seconds
+
+bucket4j.filters[18].cache-name=bucket4j
+bucket4j.filters[18].url=/user/disliked-users
+bucket4j.filters[18].metrics.tags[0].key=IP
+bucket4j.filters[18].metrics.tags[0].expression=getRemoteAddr()
+bucket4j.filters[18].rate-limits[0].bandwidths[0].capacity=2
+bucket4j.filters[18].rate-limits[0].bandwidths[0].time=120
+bucket4j.filters[18].rate-limits[0].bandwidths[0].unit=seconds
 
 
 # custom values
