--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,9 +9,11 @@ server.port=${PORT:8443}
 #server.ssl.key-store-password=alovoa
 #server.ssl.key-alias=alovoa
 
+spring.main.allow-bean-definition-overriding=true
+
 server.http2.enabled=true
 
-spring.datasource.platform=mysql
+spring.sql.init.platform=mysql
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/alovoa?createDatabaseIfNotExist=true&serverTimezone=UTC&useLegacyDatetimeCode=false
 
@@ -23,7 +25,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/alovoa?createDatabaseIfNotExis
 
 #we keep the default /login/oauth2/code/{registrationId} scheme
 
-spring.mvc.locale=en_EN
+spring.web.locale=en_EN
 
 spring.security.oauth2.client.registration.google.scope[0]=email
 spring.security.oauth2.client.registration.google.scope[1]=profile
