Add rate limiting when requesting userdata

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -223,6 +223,14 @@ bucket4j.filters[18].rate-limits[0].bandwidths[0].capacity=2
 bucket4j.filters[18].rate-limits[0].bandwidths[0].time=120
 bucket4j.filters[18].rate-limits[0].bandwidths[0].unit=seconds
 
+bucket4j.filters[19].cache-name=bucket4j
+bucket4j.filters[19].url=/user/userdata
+bucket4j.filters[19].metrics.tags[0].key=IP
+bucket4j.filters[19].metrics.tags[0].expression=getRemoteAddr()
+bucket4j.filters[19].rate-limits[0].bandwidths[0].capacity=2
+bucket4j.filters[19].rate-limits[0].bandwidths[0].time=1200
+bucket4j.filters[19].rate-limits[0].bandwidths[0].unit=seconds
+
 
 # custom values
 app.company.name=Alovoa
