Redirect to search if profile is semi complete

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -273,7 +273,7 @@ app.interest.max=5
 app.interest.min-chars=3
 app.interest.max-chars=30
 app.donation.modulus=10
-app.url.auth.success=/profile
+app.url.auth.success=/
 app.url.auth.failure=/login?error
 #24 hours
 app.user.delete.delay=86400000
