--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -41,6 +41,7 @@ spring.jpa.generate-ddl=true
 spring.jpa.hibernate.use-new-id-generator-mappings=false
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 
 ### KEYS AND CREDENTIALS ###
 #spring.datasource.password=
