Remove pulse button. Add modal animation for modals. Updated manifest.

--- a/src/main/resources/static/manifest/manifest.json
+++ b/src/main/resources/static/manifest/manifest.json
@@ -28,13 +28,13 @@
       "sizes": "512x512"
     }
   ],
-  "id": "com.alovoa.alovoa",
+  "id": "Alovoa",
   "start_url": "/?pwa",
   "background_color": "#ec407a",
   "display": "standalone",
   "scope": "/",
   "theme_color": "#ec407a",
-  "description" : "Meet new, exciting people!",
+  "description" : "Meet new, exciting people! 100% free and open-source.",
   "orientation" : "portrait",
-  "lang" : "English"
+  "lang" : "en-US"
 }
