--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -46,6 +46,7 @@ spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 ### KEYS AND CREDENTIALS ###
 #spring.datasource.password=
 #spring.datasource.username=
+#keys for transparent database encryption
 #app.text.key= #key must be 16, 24 or 32 bytes long
 #app.text.salt= #salt must be 16 bytes long
 #app.admin.email=
