--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,7 +32,8 @@ spring.security.oauth2.client.registration.google.scope[1]=profile
 spring.security.oauth2.client.registration.facebook.scope[0]=email
 spring.security.oauth2.client.registration.facebook.scope[1]=public_profile
 
-server.servlet.session.timeout=24h
+server.servlet.session.timeout=1h
+server.servlet.session.cookie.max-age=1h
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
