--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -234,6 +234,14 @@ bucket4j.filters[19].rate-limits[0].bandwidths[0].capacity=2
 bucket4j.filters[19].rate-limits[0].bandwidths[0].time=1200
 bucket4j.filters[19].rate-limits[0].bandwidths[0].unit=seconds
 
+bucket4j.filters[20].cache-name=bucket4j
+bucket4j.filters[20].url=/profile/*
+bucket4j.filters[20].metrics.tags[0].key=IP
+bucket4j.filters[20].metrics.tags[0].expression=getRemoteAddr()
+bucket4j.filters[20].rate-limits[0].bandwidths[0].capacity=10
+bucket4j.filters[20].rate-limits[0].bandwidths[0].time=10
+bucket4j.filters[20].rate-limits[0].bandwidths[0].unit=seconds
+
 
 # custom values
 app.company.name=Alovoa
