Set hikari properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,10 @@ server.http2.enabled=true
 spring.sql.init.platform=mysql
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/alovoa?createDatabaseIfNotExist=true&serverTimezone=UTC&useLegacyDatetimeCode=false
+spring.datasource.hikari.maximum-pool-size=1000
+spring.datasource.hikari.connectionTimeout=30000   
+spring.datasource.hikari.idleTimeout=600000          
+spring.datasource.hikari.maxLifetime=1800000 
 
 #Insert your oauth2 ids and secrets here
 #spring.security.oauth2.client.registration.google.client-id=<your client id>
