--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,9 +13,8 @@ spring.main.allow-bean-definition-overriding=true
 
 server.http2.enabled=true
 
-spring.sql.init.platform=mysql
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/alovoa?createDatabaseIfNotExist=true&serverTimezone=UTC&useLegacyDatetimeCode=false
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.url=jdbc:mariadb://localhost:3306/alovoa?createDatabaseIfNotExist=true&serverTimezone=UTC&useLegacyDatetimeCode=false
 spring.datasource.hikari.maximum-pool-size=1000
 spring.datasource.hikari.connectionTimeout=30000   
 spring.datasource.hikari.idleTimeout=600000          
