--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,8 +38,8 @@ spring.security.oauth2.client.registration.facebook.scope[1]=public_profile
 server.servlet.session.timeout=1h
 server.servlet.session.cookie.max-age=1h
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDB103Dialect
+spring.jpa.database-platform=org.hibernate.dialect.MariaDB103Dialect
 spring.jpa.show-sql=false
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.use-new-id-generator-mappings=false
