--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -3,8 +3,8 @@ spring.datasource.username=alovoa_test
 spring.datasource.password=alovoa_test
 
 # keys for transparent database encryption
-app.text.key=OzD7bhXR+GqkcvpkGQiYFw==
-app.text.salt=VwHEGpeNG21iOjHOrSTIJw==
+app.text.key=bqupWgmhCj3fedLxYdNAy2QFA2bS9XJX
+app.text.salt=sFRKQAhwdrZq44FQ
 
 app.admin.email=admin@alovoa.com
 app.admin.key=password
