--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -47,6 +47,8 @@ spring.jpa.hibernate.use-new-id-generator-mappings=false
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+spring.jpa.properties.hibernate.plan_cache_max_size=16
+spring.jpa.properties.hibernate.plan_parameter_metadata_max_size=16
 
 ### KEYS AND CREDENTIALS ###
 #spring.datasource.password=
