--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,6 +38,9 @@ spring.security.oauth2.client.registration.facebook.scope[1]=public_profile
 server.servlet.session.timeout=1h
 server.servlet.session.cookie.max-age=1h
 server.servlet.session.cookie.same-site=LAX
+server.compression.enabled=true
+server.compression.mime-types=text/html,text/xml,text/plain,text/css,text/javascript,application/javascript,application/json,application/xml
+server.compression.min-response-size=10240
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDB103Dialect
 spring.jpa.database-platform=org.hibernate.dialect.MariaDB103Dialect
